--- a/demo/.md
+++ b/demo/.md
@@ -1,1 +1,11 @@
+<picture>
+    <source media="(prefers-color-scheme:dark)"
+        srcset=" https://raw.githubusercontent.com/visnowden/visnowden/raw/snk/gh_snk_dark.svg" />
+    <source media="(prefers-color-scheme:light)"
+        srcset=" https://raw.githubusercontent.com/visnowden/visnowden/raw/snk/gh_snk.svg" />
+    <img alt="github contribution grid snake animation" width="100%" src="">
+</picture>
 
+![alt text](https://raw.githubusercontent.com/visnowden/visnowden/raw/snk/gh_snk_dark.svg)
+
+![alt text](https://raw.githubusercontent.com/visnowden/visnowden/raw/snk/gh_snk.svg)
